<resources>
    <string name="app_name">Retrofit Example</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_default_name">Name</string>
    <string name="txt_default_surname">Surname</string>
    <string name="txt_default_fathername">Father\'s name</string>
    <string name="btn_text_get_user">GET USER</string>
    <string name="et_hint_enter_user_id">Enter user ID</string>
    <string name="txt_def_error">Error</string>
    <string name="et_hint_enter_your_name">Enter your name</string>
    <string name="et_hint_enter_your_surname">Enter your surname</string>
    <string name="et_hint_enter_your_fathername">Enter your father\'s name</string>
    <string name="btn_text_add_user">Add User</string>
    <string name="text_add_response_message">Add response message</string>
    <string name="btn_text_save">Save</string>
    <string name="btn_text_delete_user">Delete User</string>
    <string name="text_file_select">Select File to upload</string>
    <string name="btn_text_select_file">Select file</string>
</resources>
