<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".presentation.fragments.SingleUserFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/indentation_5"
        android:paddingRight="@dimen/indentation_5"
        android:paddingTop="@dimen/indentation_5"
        android:paddingBottom="@dimen/indentation_5"
        app:cardElevation="@dimen/indentation_5"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/et_id"
                    android:inputType="number"
                    android:digits="0123456789"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_hint_enter_user_id" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_get_user"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:text="@string/btn_text_get_user"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_single_user"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/indentation_5"
        android:paddingRight="@dimen/indentation_5"
        android:paddingTop="@dimen/indentation_5"
        android:paddingBottom="@dimen/indentation_5"
        app:cardElevation="@dimen/indentation_5"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_surname_single"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_default_surname"/>

            <TextView
                android:id="@+id/txt_name_single"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_default_name"/>

            <TextView
                android:id="@+id/txt_fathername_single"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_default_fathername"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_single_error"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/indentation_5"
        android:paddingRight="@dimen/indentation_5"
        android:paddingTop="@dimen/indentation_5"
        android:paddingBottom="@dimen/indentation_5"
        app:cardElevation="@dimen/indentation_5"
        app:cardUseCompatPadding="true">

        <TextView
            android:id="@+id/txt_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorRed"
            android:text="@string/txt_def_error"/>

    </android.support.v7.widget.CardView>

</LinearLayout>