<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/indentation_50"
    android:orientation="vertical"
    tools:context=".presentation.fragments.EditUserFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/indentation_5"
        android:paddingTop="@dimen/indentation_5"
        android:paddingRight="@dimen/indentation_5"
        android:paddingBottom="@dimen/indentation_5"
        app:cardElevation="@dimen/indentation_5"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/et_id_edit"
                    android:inputType="number"
                    android:digits="0123456789"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_hint_enter_user_id" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_get_edit_user"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:text="@string/btn_text_get_user"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_edit_user"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/indentation_5"
        android:paddingTop="@dimen/indentation_5"
        android:paddingRight="@dimen/indentation_5"
        android:paddingBottom="@dimen/indentation_5"
        app:cardElevation="@dimen/indentation_5"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_hint_enter_your_name" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_edit_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_hint_enter_your_surname" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_edit_fathername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_hint_enter_your_fathername" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_save_user"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:text="@string/btn_text_save"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_edit_response"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:paddingLeft="@dimen/indentation_5"
        android:paddingTop="@dimen/indentation_5"
        android:paddingRight="@dimen/indentation_5"
        android:paddingBottom="@dimen/indentation_5"
        app:cardElevation="@dimen/indentation_5"
        app:cardUseCompatPadding="true">

        <TextView
            android:id="@+id/txt_edit_response_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorRed"
            android:text="@string/text_add_response_message"/>

    </android.support.v7.widget.CardView>

</LinearLayout>