<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/indentation_5"
    android:paddingRight="@dimen/indentation_5"
    android:paddingTop="@dimen/indentation_5"
    android:paddingBottom="@dimen/indentation_5"
    app:cardElevation="@dimen/indentation_5"
    app:cardUseCompatPadding="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_rv_id"
            android:layout_width="@dimen/indentation_50"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/txt_size_35"
            android:text="0"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_default_name"/>

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_default_surname"/>

            <TextView
                android:id="@+id/txt_fathername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_default_fathername" />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>

